--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -1,26 +1,1 @@
-/* Override default Bootstrap variables here  */
-
-$icon-font-path:          '/fonts/';
-
-//== Colors
-
-$gray-base:               ; // Bootstrap generates remaining $gray-* variants from this.
-
-$brand-primary:           ;
-$brand-success:           ;
-$brand-info:              ;
-$brand-warning:           ;
-$brand-danger:            ;
-
-$body-bg:                 ;
-
-$text-color:              ;
-$link-color:              ;
-
-//== Typography
-
-$font-family-sans-serif:  ;
-$font-family-serif:       ;
-$font-family-monospace:   ;
-
-$font-size-base:          ;
+/* Override Bootstrap variables (vendor/bootstrap/_variables.scss) here  */
