--- a/source/stylesheets/_mixins.scss
+++ b/source/stylesheets/_mixins.scss
@@ -1,16 +1,6 @@
-@mixin retina($image, $width, $height) {
-  background: transparent url($image + '.png') no-repeat;
-
-  @media (min--moz-device-pixel-ratio: 1.3),
-         (-o-min-device-pixel-ratio: 2.6/2),
-         (-webkit-min-device-pixel-ratio: 1.3),
-         (min-device-pixel-ratio: 1.3),
-         (min-resolution: 1.3dppx),
-         (max-width: 1024px) {
-
-    /* on retina, use image that's scaled by 2 */
-    background-image: url($image + '@2x.png');
-    background-size: $width $height;
+@mixin hover {
+  &:hover, &:active, &:focus {
+    @content;
   }
 }
 
@@ -18,17 +8,10 @@
  -ms-word-break: break-all;
      word-break: break-all;
 
-     /* Non standard for webkit */
+     // Non standard for webkit
      word-break: break-word;
 
 -webkit-hyphens: auto;
    -moz-hyphens: auto;
-    -ms-hyphens: auto;
         hyphens: auto;
-}
-
-@mixin hover {
-  &:hover, &:active, &:focus {
-    @content;
-  }
 }
